API update dictionary route
