# .net/api/swagger/swagger_output.json
@@ -59,6 +59,42 @@
         }
       }
     },
+    "/dictionary/save": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "Key": {
+                  "example": "any"
+                },
+                "LanguageCode": {
+                  "example": "any"
+                },
+                "Description": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/dictionary/{languageID}": {
       "get": {
         "description": "",
